--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <!-- Bootstrap Icons CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
+    <!-- Flaticon UIcons CDN -->
+    <link rel='stylesheet'
+        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
+
+
+
 </head>
 
 <body>
@@ -38,14 +44,23 @@
                 <img src="asset/logo_kelompok5.png" alt="Logo" />
                 <a href="index.html">Kelompok 5</a>
             </div>
-
+            <!-- <i class="fa-thin fa-user-graduate"></i> -->
             <!-- Menu -->
             <div class="menu-navbar" id="menuNavbar">
                 <ul>
-                    <li><a href="#">Beranda</a></li>
-                    <li><a href="#">Dosen Pengampu</a></li>
-                    <li><a href="#">Anggota Kelompok</a></li>
-                    <li><a href="#">Artikel</a></li>
+                    <li>
+                        <a href="#" class="tooltip2">Beranda<div class="tooltiptext2"><i class="bi bi-house-door"></i>
+                                Halaman Utama</div></a>
+                    </li>
+                    <a href="#" class="tooltip3">Dosen Pengampu<div class="tooltiptext3"><i
+                                class="fi fi-ts-user-graduate"></i> Khalid Ramdhani, S.Pd.I., M.Pd.I</div></a>
+                    <li><a href="#" class="tooltip4">Anggota Kelompok<div class="tooltiptext4"><i
+                                    class="bi bi-person"></i> 1. Muhammad Arif Wicaksono<br><i class="bi bi-person"></i>
+                                2. Ale Awaludin Wahid<br><i class="bi bi-person"></i> 3. Shaka Alfarizi<br>
+                                <i class="bi bi-person"></i> 4. Muhammad Dafi<br>
+                    </li>
+                    <li><a href="#" class="tooltip5">Artikel<div class="tooltiptext5"><i class="bi bi-easel"></i>
+                                Materi Presentasi</div></a></li>
                 </ul>
             </div>
 
@@ -66,27 +81,161 @@
                 <a href="index.html">Kelompok 5</a>
             </div>
 
-            <div class="menu-icon" onclick="this.classList.toggle('active')">
+            <div class="menu-icon" id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-              
+
 
         </div>
+        <!-- overlay -->
+        <div class=" overlay"></div>
+
+        <!-- sidebar -->
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <img src="asset/logo_kelompok5.png" alt="Logo" />
+                <h1><strong>Kelompok 5</strong></h1>
+            </div>
+            <div class="nav-item">
+                <a href="#"></i>
+                    <i class="bi bi-house-door"></i>
+                    Beranda</a>
+            </div>
+            <div class="nav-item">
+                <a href="#dosen-pengampu"></i>
+                    <i class="fi fi-ts-user-graduate"></i>
+                    Dosen Pengampu</a>
+            </div>
+            <div class="nav-item">
+                <a href="#"></i>
+                    <i class="bi bi-person"></i>
+                    Anggota Kelompok</a>
+            </div>
+            <div class="nav-item">
+                <a href="#"></i>
+                    <i class="bi bi-easel"></i>
+                    Artikel</a>
+            </div>
+            <div class="icon-tambahan">
+
+            </div>
+            <button class="toggle-btn" id="closeSidebar"><i class="bi bi-arrow-bar-left"></i></button>
+        </div>
+        <!-- akhir sidebar -->
     </nav>
     <!-- akhir navbar mobile -->
+
+
 
     <!-- landing page -->
     <div class="landing-page">
         <div class="paralax">
-
+            <img class="gambar1 tiang" src="asset/background1.png">
+            <img class="gambar2 orang" src="asset/background2.png">
+            <img class="gambar3 burung" src="asset/background3.png">
+        </div>
+        <div class="text-landing-page">
+            <h1 class="judul">Selamat <br>Datang di</h1>
+            <h2 class="subjudul">Kelompok 5 - 2A Informatika</h2>
+            <p class="deskripsi">Pendidikan Agama Islam</p>
+            <button onclick="document.getElementById('slide1').scrollIntoView({ behavior: 'smooth' });">Lihat Artikel<i
+                    class="bi bi-arrow-right-circle"></i></button>
         </div>
     </div>
     <!-- landing page -->
 
+    <!-- Dosen pengampu-->
+    <div class="dosen-pengampu" id="dosen-pengampu">
+        <div class="header-dosen">
+            <h1 class="judul-dosen">Dosen Pengampu</h1>
+        </div>
+        <div class="pembungkus-dosen">
+            <div class="gambar-dosen">
+                <img class="gambar-dosen1" src="./asset/background4.png">
+                <img class="gambar-dosen2" src="./asset/pak_khalid.png">
+            </div>
+
+            <div class="teks-isi">
+                <h2>Seputar, Pak Dr.</h2>
+                <h1><i>Khalid Ramdhani, S.Pd.I., M.Pd.I</i></h1>
+                <p>Tenaga Pendidik - Fakultas Agama islam</p>
+                <p>Bapak Dr. Khalid Ramdhani, S.Pd.I., M.Pd.I merupakan salah satu tenaga pendidik di Fakultas Agama
+                    Islam,
+                    Universitas
+                    Singaperbangsa Karawang (UNSIKA), dan juga mengajar pada fakultas ilmu komputer khususnya pada
+                    program
+                    studi
+                    informatika UNSIKA.</p>
+                <p>Contact :</p>
+                <!-- contact dosen -->
+                <div class="main">
+                    <div class="up">
+                        <button class="card1"
+                            onclick="window.location.href='https://www.instagram.com/khalid.ramdhani/'">
+                            <span class="tooltip">Instagram</span>
+                            <svg class="instagram" fill-rule="nonzero" height="30px" width="30px" viewBox="0,0,256,256"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                                <g style="mix-blend-mode: normal" text-anchor="none" font-size="none" font-weight="none"
+                                    font-family="none" stroke-dashoffset="0" stroke-dasharray="" stroke-miterlimit="10"
+                                    stroke-linejoin="miter" stroke-linecap="butt" stroke-width="1" stroke="none"
+                                    fill-rule="nonzero">
+                                    <g transform="scale(8,8)">
+                                        <path
+                                            d="M11.46875,5c-3.55078,0 -6.46875,2.91406 -6.46875,6.46875v9.0625c0,3.55078 2.91406,6.46875 6.46875,6.46875h9.0625c3.55078,0 6.46875,-2.91406 6.46875,-6.46875v-9.0625c0,-3.55078 -2.91406,-6.46875 -6.46875,-6.46875zM11.46875,7h9.0625c2.47266,0 4.46875,1.99609 4.46875,4.46875v9.0625c0,2.47266 -1.99609,4.46875 -4.46875,4.46875h-9.0625c-2.47266,0 -4.46875,-1.99609 -4.46875,-4.46875v-9.0625c0,-2.47266 1.99609,-4.46875 4.46875,-4.46875zM21.90625,9.1875c-0.50391,0 -0.90625,0.40234 -0.90625,0.90625c0,0.50391 0.40234,0.90625 0.90625,0.90625c0.50391,0 0.90625,-0.40234 0.90625,-0.90625c0,-0.50391 -0.40234,-0.90625 -0.90625,-0.90625zM16,10c-3.30078,0 -6,2.69922 -6,6c0,3.30078 2.69922,6 6,6c3.30078,0 6,-2.69922 6,-6c0,-3.30078 -2.69922,-6 -6,-6zM16,12c2.22266,0 4,1.77734 4,4c0,2.22266 -1.77734,4 -4,4c-2.22266,0 -4,-1.77734 -4,-4c0,-2.22266 1.77734,-4 4,-4z">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg>
+                        </button>
+                        <button class="card2">
+                            <span class="tooltip">Facebook</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="24"
+                                class="facebook" width="24">
+                                <path
+                                    d="M9.19795 21.5H13.198V13.4901H16.8021L17.198 9.50977H13.198V7.5C13.198 6.94772 13.6457 6.5 14.198 6.5H17.198V2.5H14.198C11.4365 2.5 9.19795 4.73858 9.19795 7.5V9.50977H7.19795L6.80206 13.4901H9.19795V21.5Z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="down">
+                        <button class="card3" onclick="window.location.href='https://wa.me/+6285711210364'">
+                            <span class="tooltip2">whatsapp</span>
+                            <svg width="30" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                                class="whatsapp">
+                                <path
+                                    d="M19.001 4.908A9.817 9.817 0 0 0 11.992 2C6.534 2 2.085 6.448 2.08 11.908c0 1.748.458 3.45 1.321 4.956L2 22l5.255-1.377a9.916 9.916 0 0 0 4.737 1.206h.005c5.46 0 9.908-4.448 9.913-9.913A9.872 9.872 0 0 0 19 4.908h.001ZM11.992 20.15A8.216 8.216 0 0 1 7.797 19l-.3-.18-3.117.818.833-3.041-.196-.314a8.2 8.2 0 0 1-1.258-4.381c0-4.533 3.696-8.23 8.239-8.23a8.2 8.2 0 0 1 5.825 2.413 8.196 8.196 0 0 1 2.41 5.825c-.006 4.55-3.702 8.24-8.24 8.24Zm4.52-6.167c-.247-.124-1.463-.723-1.692-.808-.228-.08-.394-.123-.556.124-.166.246-.641.808-.784.969-.143.166-.29.185-.537.062-.247-.125-1.045-.385-1.99-1.23-.738-.657-1.232-1.47-1.38-1.716-.142-.247-.013-.38.11-.504.11-.11.247-.29.37-.432.126-.143.167-.248.248-.413.082-.167.043-.31-.018-.433-.063-.124-.557-1.345-.765-1.838-.2-.486-.404-.419-.557-.425-.142-.009-.309-.009-.475-.009a.911.911 0 0 0-.661.31c-.228.247-.864.845-.864 2.067 0 1.22.888 2.395 1.013 2.56.122.167 1.742 2.666 4.229 3.74.587.257 1.05.408 1.41.523.595.19 1.13.162 1.558.1.475-.072 1.464-.6 1.673-1.178.205-.58.205-1.075.142-1.18-.061-.104-.227-.165-.475-.29Z">
+                                </path>
+                            </svg>
+                        </button>
+                        <button class="card4">
+                            <span class="tooltip2">Gmail</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="24"
+                                class="gmail" width="24">
+                                <path
+                                    d="M6 12C6 15.3137 8.68629 18 12 18C14.6124 18 16.8349 16.3304 17.6586 14H12V10H21.8047V14H21.8C20.8734 18.5645 16.8379 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C15.445 2 18.4831 3.742 20.2815 6.39318L17.0039 8.68815C15.9296 7.06812 14.0895 6 12 6C8.68629 6 6 8.68629 6 12Z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <!-- akhir contact dosen -->
+            </div>
+            <!-- akhir teks isi -->
+        </div>
+        <!-- akhir pembukungkus dosen -->
+    </div>
+    <!-- akhir dosen pengampu -->
+
+    <!-- anggota kelompok -->
+     <!--  -->
+
+
     <script src="asset/js/bootstrap.bundle.min.js"></script>
-    <script src="asset/css/script.js"></script>
+    <script src="asset/js/script.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/cc72c425a9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
