--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         <a href="#" class="tooltip2">Beranda<div class="tooltiptext2"><i class="bi bi-house-door"></i>
                                 Halaman Utama</div></a>
                     </li>
-                    <a href="#" class="tooltip3">Dosen Pengampu<div class="tooltiptext3"><i
+                    <a href="#dosen-pengampu" class="tooltip3">Dosen Pengampu<div class="tooltiptext3"><i
                                 class="fi fi-ts-user-graduate"></i> Khalid Ramdhani, S.Pd.I., M.Pd.I</div></a>
-                    <li><a href="#" class="tooltip4">Anggota Kelompok<div class="tooltiptext4"><i
+                    <li><a href="#anggota-kelompok" class="tooltip4">Anggota Kelompok<div class="tooltiptext4"><i
                                     class="bi bi-person"></i> 1. Muhammad Arif Wicaksono<br><i class="bi bi-person"></i>
                                 2. Ale Awaludin Wahid<br><i class="bi bi-person"></i> 3. Shaka Alfarizi<br>
                                 <i class="bi bi-person"></i> 4. Muhammad Dafi<br>
@@ -231,7 +231,11 @@
     <!-- anggota kelompok -->
     <div class="anggota-kelompok" id="anggota-kelompok">
         <h1 class="about-title">Team Kelompok</h1>
-
+        <p class="about-description">Di balik setiap materi presentasi dan inovasi yang kami bagikan, ada sebuah tim yang berdedikasi. Kami adalah kelompok
+        mahasiswa/i Informatika  yang berkomitmen untuk mempelajari dan
+        menyajikan topik-topik penting seperti Sumber Hukum Islam, Ijtihad, serta hubungan antara Islam, Ilmu Pengetahuan, dan
+        Teknologi. Dengan bimbingan dosen pengampu kami, setiap anggota tim bekerja sama untuk memberikan konten yang informatif
+        dan relevan.</p>
         <div class="carousel-container">
             <button class="nav-arrow left">‹</button>
             <div class="carousel-track">
@@ -308,10 +312,63 @@
     </div>
     <!-- akhir artikel -->
 
+    <!----Start Footer-->
+    <footer>
+        <div class="footer-container">
+            <div class="logo-section">
+                <img src="asset/logo_kelompok5.png" alt="HIMTIKA Logo" class="logo-footer">
+                <h3>Kelompok 5</h3>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="footer-text">
+                <div class="footer-section section-1">
+                    <h4>Navigasi</h4>
+                    <ul>
+                        <li><a href="#">Beranda</a></li>
+                        <li><a href="#dosen-pengampu">Dosen Pengampu</a></li>
+                        <li><a href="#anggota-kelompok">Anggota Kelompok</a></li>
+                        <li><a href="#artikel">Artikel</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section section-2">
+                    <h4>Materi</h4>
+                    <ul>
+                        <li><a href="artikel1.html">Presentasi 1</a></li>
+                        <li><a href="artikel2.html">Presentasi 2</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section section-3">
+                    <h4 id="teks1">About</h4>
+                    <ul class="halo">
+                        Webiste ini berfungsi sebagai pusat materi presentasi kami. Di sini, Anda dapat mengakses
+                        materi tentang Sumber Hukum Islam dan Ijtihad, serta Islam, Ilmu Pengetahuan, dan Teknologi.
+                        Situs ini juga menampilkan
+                        profil dosen pembimbing dan anggota kelompok kami.
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <hr>
+            <p>Copyright &copy; 2025 Licensed, Registered and authorized by <a class="copyright-text"
+                    href="https://github.com/Rif340">Rif340.</a></p>
+            <div class="footer-logo-container">
+                <img src="asset/logo_kelompok5.png" alt="HIMTIKA Logo" class="footer-logo">
+                <p>Kelompok5 2025</p>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer End -->
+
     <!-- footer -->
-    <div class="footer">
-        <p class="copyright-text">Copyright &copy; 2025 <a href="https://github.com/Rif340">Rif340.</a> All Rights Reserved.</p>
-    </div>
+
     <!-- akhir footer -->
 
     <!-- script boostrap, animasi ,icon, dll -->
