--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 2. Ale Awaludin Wahid<br><i class="bi bi-person"></i> 3. Shaka Alfarizi<br>
                                 <i class="bi bi-person"></i> 4. Muhammad Dafi<br>
                     </li>
-                    <li><a href="#" class="tooltip5">Artikel<div class="tooltiptext5"><i class="bi bi-easel"></i>
+                    <li><a href="artikel.html" class="tooltip5">Artikel<div class="tooltiptext5"><i class="bi bi-easel"></i>
                                 Materi Presentasi</div></a></li>
                 </ul>
             </div>
@@ -99,22 +99,22 @@
                 <h1><strong>Kelompok 5</strong></h1>
             </div>
             <div class="nav-item">
-                <a href="#"></i>
+                <a href="index.html"></i>
                     <i class="bi bi-house-door"></i>
                     Beranda</a>
             </div>
             <div class="nav-item">
-                <a href="#dosen-pengampu"></i>
+                <a href="index.html#dosen-pengampu"></i>
                     <i class="fi fi-ts-user-graduate"></i>
                     Dosen Pengampu</a>
             </div>
             <div class="nav-item">
-                <a href="#anggota-kelompok"></i>
+                <a href="index.html#anggota-kelompok"></i>
                     <i class="bi bi-person"></i>
                     Anggota Kelompok</a>
             </div>
             <div class="nav-item">
-                <a href="#artikel"></i>
+                <a href="artikel.html"></i>
                     <i class="bi bi-easel"></i>
                     Artikel</a>
             </div>
@@ -332,7 +332,7 @@
                         <li><a href="#">Beranda</a></li>
                         <li><a href="#dosen-pengampu">Dosen Pengampu</a></li>
                         <li><a href="#anggota-kelompok">Anggota Kelompok</a></li>
-                        <li><a href="#artikel">Artikel</a></li>
+                        <li><a href="artikel.html">Artikel</a></li>
                     </ul>
                 </div>
 
