--- a/artikel2.html
+++ b/artikel2.html
@@ -136,7 +136,7 @@
         <div class="artikel-header">
             <span class="halo2"><a href="index.html">Beranda</a> <i class="fa-solid fa-chevron-right"></i>
                 <a href="artikel.html">Artikel</a><i class="fa-solid fa-chevron-right"></i>
-                <p>Sumber Hukum Islam (Ijtihad)</p>
+                <p>Islam, Ilmu Pengetahuan dan Teknologi</p>
             </span>
         </div>
         <!-- akhir artikel header -->
